update code to deploy